# uoh-sqak-ex03

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT-lec06-pdfs.md  CONTEXT-lecture-06.md  CONTEXT-rubric-and-pdfs.md  IDEA-raw.txt  IDEA.md  Makefile  README.md  RULES.md  SUBMISSION_CHECKLIST.md  pyproject.toml  uoh-sqak-ex03.docx
.github/workflows/: ci.yml
assets/screenshots/: pytest_output.txt
config/: agents.json  crew.json  latex.json  logging_config.json  rate_limits.json  setup.json  tasks.json
docs/: PLAN.md  PRD.md  PRD_bibliography.md  PRD_chart_generator.md  PRD_crew_orchestrator.md  PRD_editor_agent.md  PRD_fast_pipeline.md  PRD_gatekeeper.md  PRD_latex_agent.md  PRD_latex_repair_loop.md  PRD_researcher_agent.md  PRD_skill_layer.md  PRD_tools.md  PRD_writer_agent.md  PROMPTS.md  TODO.md
docs/ADRs/: ADR-001-crewai-vs-langgraph.md  ADR-002-lualatex-vs-xelatex.md  ADR-003-markdown-to-latex-pipeline.md  ADR-004-biblatex-biber.md  ADR-005-sdk-gatekeeper-pattern.md  ADR-006-skill-layer.md  ADR-007-uv-package-manager.md
docs/diagrams/: class_diagram.md
latex/: Makefile  main.tex
latex/bib/: references.bib
latex/chapters/: ch01_introduction.tex  ch02_architectures.tex  ch03_frameworks.tex  ch04_production.tex  ch05_bidi.tex  ch06_casestudy.tex  ch07_conclusion.tex
latex/figures/: crew_architecture.tikz
latex/style/: article.sty
scripts/: build_article.py  check_file_lines.py  check_pdf_size.py  debug_pipeline.py  fill_submission_pdf.py  generate_figures.py  run_fast.py  run_pipeline.py
tests/: conftest.py
(+64 files in other folders)
