[project]
name = "agent-article"
version = "1.00"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.80.0",
    "langchain-anthropic>=0.3.0",
    "duckduckgo-search>=7.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "rich>=13.0.0",
    "seaborn>=0.13.2",
    "networkx>=3.6.1",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
agent-article = "agent_article.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_article"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
